samples/_failures_safe/1761543276_b9b82a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8e80cfe.c: In function ‘main’:
./samples/SAFE/__tmp_e8e80cfe.c:121: error: expected ‘{’ at end of input
